Add testing and documentation to categories
